--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
-    <meta name="description" content="Official - TuCode Tech Solutions. 
-    Offering Trusted Microsoft Services such as Domain & Email Hosting, ERP Solutions, Systems Consultations & Troubleshoot">
+    <meta name="description" content="Official - TuCode Tech Solutions. Trusted On Microsoft 
+    Services Such As Domain & Email Hosting, ERP Solutions, Systems Consultations & Troubleshoot, 
+    Azure Securities & Controls, Web Designing & Maintainance, We Believe & 
+    Work To Deliver Simple, Light & Attractive Systems">
     <meta name="author" content="Jafari Mchasa Akida, Co-founder & CEO, TuCode Tech Solutions">
     <link rel="icon" href="https://avatars.githubusercontent.com/u/52626265?s=200&v=4">
     <title>Official - TuCode Tech Solutions</title>
